<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileDetailsActivity"
    tools:showIn="@layout/activity_profile_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_details_intro" />

        <!-- SUBSECTION 0 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:textSize="20sp"
            android:text="@string/profile_questions_sub_1_title" />

        <!-- Question a -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_question_a" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/qa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/qa_o1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/qa_o3"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/qa_o5"/>
        </RadioGroup>

        <!-- Question b -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_question_b" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/qb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/qb_o1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/qb_o3"/>
        </RadioGroup>

        <!-- Question c -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_question_c" />

        <Spinner
            android:id="@+id/housing_selection_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_details_mid" />

        <!-- SUBSECTION 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:textSize="20sp"
            android:text="@string/profile_questions_sub_1_title" />

        <!-- Question 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_question_1" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q1_o1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="2"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q1_o3"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="4"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q1_o5"/>
        </RadioGroup>

        <!-- Question 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_question_2" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q2_o1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="2"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q2_o3"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="4"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q2_o5"/>
        </RadioGroup>

        <!-- Question 3 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_question_3" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q3_o1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="2"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q3_o3"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="4"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q3_o5"/>
        </RadioGroup>

        <!-- SUBSECTION 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:textSize="20sp"
            android:text="@string/profile_questions_sub_2_title" />

        <!-- Question 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_question_4" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q4_o1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="2"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q4_o3"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="4"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="?android:attr/listChoiceIndicatorSingle"
                android:gravity="center_horizontal|bottom"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/q4_o5"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_gravity="center"
            android:text="Submit"
            android:onClick="onProfileDetailsSubmit" />

        <TextView
            android:id="@+id/profile_details_warning_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft ="@dimen/warning_margin"
            android:layout_marginRight="@dimen/warning_margin"
            android:layout_gravity="center"
            android:text="\n\n\n\n"
            android:textColor="#FF5722"
            android:textSize="15sp" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>